modifying titular font

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     </head>
     <body class="background-general">
         <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h1 class="main-title">
+                        Circe Julieta
+                    </h1>
+                </div>
+            </div>
+
             <div class="row bg-image">
                 <div class="col"></div>
                 <div class="col">
@@ -27,6 +35,10 @@
                     </div>
                 </div>
                 <div class="col"></div>
+            </div>
+
+            <div class="row">
+
             </div>
         </div>
     </body>
