--- a/index.html
+++ b/index.html
@@ -8,38 +8,74 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/styles.css">
     </head>
-    <body class="background-general">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    <h1 class="main-title">
-                        Circe Julieta
-                    </h1>
+    <body class="background-general mt-3">
+        <div class="container h-100">
+            <div class="row bg-image mb-3 h-100">
+                <div class="row mb-5">
+                    <div class="col text-center">
+                        <h1 class="main-title">
+                            Circe Julieta
+                        </h1>
+                    </div>
                 </div>
-            </div>
-
-            <div class="row bg-image">
-                <div class="col"></div>
-                <div class="col">
-                    <div class="p-3 m-0 border-0 m-0 border-0 z-3">
-                        <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="1200">
-                                    <img src="img/carousel/first.png" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="1200">
-                                    <img src="img/carousel/second.png" class="d-block w-100">
+    
+                <div class="row justify-content-center mb-lg-3">
+                    <div class="col-4">
+                        <div class="p-3 m-0 border-0 m-0 border-0 z-3">
+                            <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="1200">
+                                        <img src="img/carousel/first.webp" class="d-block w-100">
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="1200">
+                                        <img src="img/carousel/second.webp" class="d-block w-100">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col"></div>
+    
+                <div class="row mt-lg-3">
+                    <h3 class="col text-center">
+                        Te invita a su baby shower!!!
+                    </h3>
+                </div>
             </div>
 
             <div class="row">
+                <div class="row justify-content-center mt-3 mb-lg-3">
+                    <div class="col-3 text-center">
+                        <p >Unete a la celebración de Deyanira y Jordi por el nuevo integrante de una nueva familia</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="row align-content-center ">
+                <div class="col text-center">
+                    <div class="row">
+                        <p class="question-mark">¿Donde será?</p>
+                    </div>
+                    <div class="row">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235.17809083561082!2d-98.98681944651183!3d19.41890959072562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e30043604a13%3A0xbcf4202d9aff03af!2sAluminio%20para%20la%20vida%20domestica%20y%20profesional%20Do%C3%B1a%20Beni!5e0!3m2!1ses-419!2smx!4v1712256224389!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <div class="row">
+                        <p class="question-mark">¿Cuando será?</p>
+                    </div>
+                    <div class="row">
+                        <p>20 de Abril</p>
+                    </div>
+                    <div class="row">
+                        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+                        <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
+    <footer>
+
+    </footer>
 </html>
