last details of page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body class="background-general mt-3">
-        <div class="container h-100">
+        <div class="container">
             <div class="row bg-image mb-3 h-100">
                 <div class="row mb-5">
                     <div class="col text-center">
@@ -52,7 +52,7 @@
             </div>
 
             <div class="row align-content-center ">
-                <div class="col text-center">
+                <div class="col text-center p-5">
                     <div class="row">
                         <p class="question-mark">¿Donde será?</p>
                     </div>
@@ -60,7 +60,7 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235.17809083561082!2d-98.98681944651183!3d19.41890959072562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e30043604a13%3A0xbcf4202d9aff03af!2sAluminio%20para%20la%20vida%20domestica%20y%20profesional%20Do%C3%B1a%20Beni!5e0!3m2!1ses-419!2smx!4v1712256224389!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <div class="col text-center">
+                <div class="col text-center p-5">
                     <div class="row">
                         <p class="question-mark">¿Cuando será?</p>
                     </div>
@@ -73,9 +73,43 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                            La futura mamá
+                        </div>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p>¡Una niña en camino!</p>
+                                <footer class="blockquote-footer">La vida nos ha sorprendido con un regalo muy especial: la llegada de una niña. Nuestra emoción es mucha y queremos compartirla mucho en su baby shower.</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                            El futuro papá
+                        </div>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p>¡Una niña en camino!</p>
+                                <footer class="blockquote-footer">Una nueva princesa llega a este reino llamado vida, no hay nada que no espere y desee más que poder mostrarle lo maravilloso que puede llegar a ser el mundo.</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
     <footer>
-
+        <div class="row text-center mt-5">
+            <blockquote>
+                Jass-Soft <script>document.write( new Date().getFullYear() );</script>
+            </blockquote>
+        </div>
     </footer>
 </html>
