--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <title>Baby shower Circe Julieta</title>
         <link rel="icon" type="image/x-icon" href="img/chupete.png">
 
@@ -22,8 +24,8 @@
                 <div class="row justify-content-center mb-lg-3">
                     <div class="col-4">
                         <div class="p-3 m-0 border-0 m-0 border-0 z-3">
-                            <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
-                                <div class="carousel-inner">
+                            <div id="carousel-title" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
+                                <div class="carousel-inner" id="carousel-title-inner">
                                     <div class="carousel-item active" data-bs-interval="1200">
                                         <img src="img/carousel/first.webp" class="d-block w-100">
                                     </div>
@@ -74,8 +76,8 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
+            <div class="row ">
+                <div class="col align-self-center">
                     <div class="card">
                         <div class="card-header">
                             La futura mamá
@@ -90,13 +92,38 @@
                 </div>
 
                 <div class="col">
+                    <div id="carousel-photos" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="1" aria-label="2"></button>
+                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="2" aria-label="3"></button>
+                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/carousel/1.jpg" class="w-100 h-50 " alt="1">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/carousel/2.jpg" class="w-100 h-50 " alt="2">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/carousel/3.jpg" class="w-100 h-50 " alt="3">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/carousel/4.jpg" class="w-100 h-50 " alt="4">
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+                <div class="col align-self-center">
                     <div class="card">
                         <div class="card-header">
                             El futuro papá
                         </div>
                         <div class="card-body">
                             <blockquote class="blockquote mb-0">
-                                <p>¡Una niña en camino!</p>
+                                <p>"Ven para aca principa"</p>
                                 <footer class="blockquote-footer">Una nueva princesa llega a este reino llamado vida, no hay nada que no espere y desee más que poder mostrarle lo maravilloso que puede llegar a ser el mundo.</footer>
                             </blockquote>
                         </div>
