--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <title>Baby shower Circe Julieta</title>
         <link rel="icon" type="image/x-icon" href="img/chupete.png">
 
@@ -69,8 +70,8 @@
                         <p>20 de Abril</p>
                     </div>
                     <div class="row">
-                        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-                        <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>
+                        <!--<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+                        <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>-->
                     </div>
                 </div>
             </div>
