--- a/index.html
+++ b/index.html
@@ -46,38 +46,42 @@
             </div>
 
             <div class="row">
-                <div class="row justify-content-center mt-3 mb-lg-3">
-                    <div class="col-3 text-center">
-                        <p >Unete a la celebración de Deyanira y Jordi por el nuevo integrante de una nueva familia</p>
+                <div class="col">
+                    <div class="row justify-content-center mt-3 mb-lg-3 p-lg-2">
+                        <div class="col-3 text-center">
+                            <p >Unete a la celebración de Deyanira y Jordi por el nuevo integrante de una nueva familia</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="row align-content-center">
-                <div class="col-12 text-center p-lg-5 col-lg-5">
+                <div class="col-12 text-center p-lg-2 col-lg-5">
                     <div class="row">
                         <p class="question-mark">¿Donde será?</p>
                     </div>
                     <div class="row">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235.17809083561082!2d-98.98681944651183!3d19.41890959072562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e30043604a13%3A0xbcf4202d9aff03af!2sAluminio%20para%20la%20vida%20domestica%20y%20profesional%20Do%C3%B1a%20Beni!5e0!3m2!1ses-419!2smx!4v1712256224389!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="col">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235.17809083561082!2d-98.98681944651183!3d19.41890959072562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e30043604a13%3A0xbcf4202d9aff03af!2sAluminio%20para%20la%20vida%20domestica%20y%20profesional%20Do%C3%B1a%20Beni!5e0!3m2!1ses-419!2smx!4v1712256224389!5m2!1ses-419!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 text-center m-md-3 m-lg-0 p-lg-2 col-lg-5">
                     <div class="row">
                         <p class="question-mark">¿Cuando será?</p>
                     </div>
+                    
                     <div class="row">
-                        <p>20 de Abril</p>
-                    </div>
-                    <div class="row">
-                        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-                        <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>
+                        <div class="col">
+                            <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+                            <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row ">
-                <div class="col align-self-center">
+            <div class="row mt-3">
+                <div class="col align-content-lg-center">
                     <div class="card">
                         <div class="card-header">
                             La futura mamá
@@ -91,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col align-self-center">
                     <div id="carousel-photos" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -116,7 +120,7 @@
                       </div>
                 </div>
 
-                <div class="col align-self-center">
+                <div class="col align-content-lg-center">
                     <div class="card">
                         <div class="card-header">
                             El futuro papá
