--- a/index.html
+++ b/index.html
@@ -74,57 +74,115 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row mt-4">
-                <div class="col-lg-3 col-3 align-content-lg-center">
-                    <div class="card">
-                        <div class="card-header">
-                            La futura mamá
+            <div class="d-none d-md-block">
+                <div class="row mt-4">
+                    <div class="col-lg-3 col-3 align-content-lg-center">
+                        <div class="card">
+                            <div class="card-header">
+                                La futura mamá
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>¡Una niña en camino!</p>
+                                    <footer class="blockquote-footer">La vida nos ha sorprendido con un regalo muy especial: la llegada de una niña. Nuestra emoción es mucha y queremos compartirla mucho en su baby shower.</footer>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <blockquote class="blockquote mb-0">
-                                <p>¡Una niña en camino!</p>
-                                <footer class="blockquote-footer">La vida nos ha sorprendido con un regalo muy especial: la llegada de una niña. Nuestra emoción es mucha y queremos compartirla mucho en su baby shower.</footer>
-                            </blockquote>
+                    </div>
+    
+                    <div class="col-lg-4 col-4 align-self-center">
+                        <div id="carousel-photos" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="1" aria-label="2"></button>
+                              <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="2" aria-label="3"></button>
+                              <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="img/carousel/1.jpg" class="w-100 h-50 " alt="1">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/carousel/2.jpg" class="w-100 h-50 " alt="2">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/carousel/3.jpg" class="w-100 h-50 " alt="3">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/carousel/4.jpg" class="w-100 h-50 " alt="4">
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+    
+                    <div class="col-lg-3 col-3 align-content-lg-center">
+                        <div class="card">
+                            <div class="card-header">
+                                El futuro papá
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>"Ven para aca principa"</p>
+                                    <footer class="blockquote-footer">Una nueva princesa llega a este reino llamado vida, no hay nada que no espere y desee más que poder mostrarle lo maravilloso que puede llegar a ser el mundo.</footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-lg-4 col-4 align-self-center">
-                    <div id="carousel-photos" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
-                        <div class="carousel-indicators">
-                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="1" aria-label="2"></button>
-                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="2" aria-label="3"></button>
-                          <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="3" aria-label="Slide 3"></button>
+            </div>
+            <div class="d-md-none">
+                <div class="row mt-4 mb-4 justify-content-center ">
+                    <div class="col-4">
+                        <div id="carousel-photos" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="1" aria-label="2"></button>
+                                <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="2" aria-label="3"></button>
+                                <button type="button" data-bs-target="#carousel-photos" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="img/carousel/1.jpg" class="w-100 h-50 " alt="1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/carousel/2.jpg" class="w-100 h-50 " alt="2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/carousel/3.jpg" class="w-100 h-50 " alt="3">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/carousel/4.jpg" class="w-100 h-50 " alt="4">
+                                </div>
+                            </div>
                         </div>
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="img/carousel/1.jpg" class="w-100 h-50 " alt="1">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/carousel/2.jpg" class="w-100 h-50 " alt="2">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/carousel/3.jpg" class="w-100 h-50 " alt="3">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/carousel/4.jpg" class="w-100 h-50 " alt="4">
-                          </div>
-                        </div>
-                      </div>
+                    </div>
                 </div>
-
-                <div class="col-lg-3 col-3 align-content-lg-center">
-                    <div class="card">
-                        <div class="card-header">
-                            El futuro papá
+                <div class="row">
+                    <div class="col-5">
+                        <div class="card">
+                            <div class="card-header">
+                                La futura mamá
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>¡Una niña en camino!</p>
+                                    <footer class="blockquote-footer">La vida nos ha sorprendido con un regalo muy especial: la llegada de una niña. Nuestra emoción es mucha y queremos compartirla mucho en su baby shower.</footer>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <blockquote class="blockquote mb-0">
-                                <p>"Ven para aca principa"</p>
-                                <footer class="blockquote-footer">Una nueva princesa llega a este reino llamado vida, no hay nada que no espere y desee más que poder mostrarle lo maravilloso que puede llegar a ser el mundo.</footer>
-                            </blockquote>
+                    </div>
+                    <div class="col"></div>
+                    <div class="col-5">
+                        <div class="card">
+                            <div class="card-header">
+                                El futuro papá
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>"Ven para aca principa"</p>
+                                    <footer class="blockquote-footer">Una nueva princesa llega a este reino llamado vida, no hay nada que no espere y desee más que poder mostrarle lo maravilloso que puede llegar a ser el mundo.</footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
