--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-5 offset-1">
                         <div class="card">
                             <div class="card-header">
                                 La futura mamá
@@ -171,8 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col"></div>
-                    <div class="col-4">
+                    <div class="col-5 offset-1">
                         <div class="card">
                             <div class="card-header">
                                 El futuro papá
