--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-5 p-2">
+                    <div class="col-5 me-3">
                         <div class="card">
                             <div class="card-header">
                                 La futura mamá
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-5 p-2">
+                    <div class="col-5">
                         <div class="card">
                             <div class="card-header">
                                 El futuro papá
