--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
         
                     <div class="row">
-                        <h3 class="col-12 text-center">
+                        <h3 class="col-12 text-center mt-lg-5">
                             Te invita a su baby shower!!!
                         </h3>
                     </div>
