--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                             <p class="question-mark">¿Cuando será?</p>
                         </div>
                         <div class="col-12">
+                            <p class="text-center">20 de Abril</p>
+                            <br>
                             <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
                             <div class="elfsight-app-64f39201-0b6c-47a6-91db-dd2aa13f0ce5" data-elfsight-app-lazy></div>
                         </div>
